<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ProfileFragment">
    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:text="EDIT"
        android:id="@+id/edit_profile"
        ></Button>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/profile_img"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="200dp"
        android:maxHeight="200dp">

    </ImageView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1234"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_19"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usc_student"
            android:textSize="25sp" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>